Add robots noindex, add about us text

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,6 +12,7 @@
     <meta property="og:locale" content="en_US" />
     <meta name="description" content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description." />
     <meta property="og:description" content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description." />
+    <meta name="robots" content="noindex,nofollow">
     <link rel="canonical" href="http://localhost:4000/" />
     <meta property="og:url" content="http://localhost:4000/" />
     <meta property="og:site_name" content="Your awesome title" />
@@ -42,40 +43,21 @@
             <div class="svg-container leaf-outline">{% include svg/leaf-outline.svg %}</div>
             <div class="svg-container magnolia-outline">{% include svg/magnolia-outline.svg %}</div>
         </section>
-    </main>
-    <footer class="site-footer h-card">
-        <data class="u-url" href="/"></data>
-        <div class="wrapper">
-            <h2 class="footer-heading">Your awesome title</h2>
-            <div class="footer-col-wrapper">
-                <div class="footer-col footer-col-1">
-                    <ul class="contact-list">
-                        <li class="p-name">Your awesome title</li>
-                        <li><a class="u-email" href="mailto:your-email@example.com">your-email@example.com</a></li>
-                    </ul>
+        <section id="about" class="page about">
+            <div class="grid-container">
+                <div class="story">
+                    <h2>Jenny and Taylor are tying the knot!</h2>
+                    <p>With the special day fast approaching, we created this wedding website to provide our friends and family with all the important details about our wedding. We cannot wait to celebrate this moment of our lives with you.</p>
+                    <h3>HOW WE MET</h3>
+                    <p>It was the spring of 2011. Jenny was attending the University of Texas while living in a cozy house north of the campus. For the upcoming semester, she had signed up for Cellular Biology but still needed the textbook. While tending to her garden, Jenny met one of her next-door neighbors. After hearing about her upcoming schedule, he mentioned that his roommate kept all of his old books including the one that Jenny needed. Without hesitation, he freely volunteered his roommate’s book to her. With textbook in hand, she was ready. Weeks passed and the halfway mark of the semester neared. Midterms were on her doorstep but Jenny had yet to meet the book’s owner. Nevertheless, she decided to ask for help for her upcoming exam.</p>
+                    <p>Taylor lived north of campus on East 30th Street during his final years of college at the University of Texas. He was studying neurobiology and government and spent a lot of his time in the library. As a result, Taylor had never met any of his neighbors. Even still, he always noticed the girl next door who played with her dog in her front yard. He also noticed that his textbook collection seemed to be getting smaller and smaller. Right when he was about to investigate, there was a knock at the door. Taylor’s neighbor had come to ask for advice about Cellular Biology and confessed that she took his textbook.</p>
+                    <p>Little did Taylor know, Jenny was not only looking to take his books but also would end up taking his heart.</p>
                 </div>
-                <div class="footer-col footer-col-2">
-                    <ul class="social-media-list">
-                        <li>
-                            <a href="https://github.com/jekyll">
-                                <svg class="svg-icon">
-                                    <use xlink:href="/assets/minima-social-icons.svg#github"></use>
-                                </svg> <span class="username">jekyll</span></a>
-                        </li>
-                        <li>
-                            <a href="https://www.twitter.com/jekyllrb">
-                                <svg class="svg-icon">
-                                    <use xlink:href="/assets/minima-social-icons.svg#twitter"></use>
-                                </svg> <span class="username">jekyllrb</span></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="footer-col footer-col-3">
-                    <p>Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.</p>
+                <div class="gallery">
                 </div>
             </div>
-        </div>
-    </footer>
+        </section>
+    </main>
 </body>
 
 </html>
