Add templating for forestry, styles for about section, slick slider

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,5 +14,6 @@
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Libre+Franklin:300,300i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="https://yarnpkg.com/en/package/normalize.css" />
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="{{ "/css/main.css" | absolute_url }}">
 </head>
