Add markdownify to registry section

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -88,7 +88,7 @@
         <section id="registry" class="page registry auto-height">
             <div class="grid-container">
                 <div class="registry-intro">
-                    <h2>Registry</h2> {{ page.registry.registry_intro }}
+                    <h2>Registry</h2> {{ page.registry.registry_intro | markdownify }}
                 </div>
             </div>
             <div class="grid-container registries">
